# auto_correct

./: .gitignore  Cargo.toml  README.md  build.rs
benches/: bench.rs
examples/: console.rs  console_async.rs  console_utils.rs
resources/: pre-processor.py
resources/en-us/: bnc_all.txt  freq_50k.txt  freq_50k_preproc.txt  pre-processor.py  words2.txt
resources/old/: uniq_full.txt  uniq_high.txt  uniq_low.txt
src/: candidate.rs  common.rs  config.rs  dynamic.rs  dynamic_mode.rs  hybrid.rs  hybrid_mode.rs  lib.rs  static_mode.rs  stores.rs  support.rs  trie.rs
